# TaskCBR

./: Dockerfile  docker-compose.yml  docketfile.yml  main.py  pyproject.toml
bot/handlers/: __init__.py  commands_.py
bot/keyboards/: __init__.py  callback_factory.py  menu.py
bot/middlewares/: sevice_middleware.py
bot/states/: __init__.py
data/: dump.xlsx  main.db
settings/: config.py  settings.ini
tools/: currency_service.py
